install/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wekan
  labels:
    app: wekan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
      - image: wekanteam/wekan:v6.18
        name: wekan
        ports:
        - containerPort: 8080
          name: wekan
