install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wekan
  labels:
    app: wekan
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: wekan
