install/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wekan-ingress
spec:
  rules:
  - host: wekan.roldyx.duckdns.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wekan
          servicePort: 8080
